# ewmh_m2m

./: .coveragerc  .gitignore  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.rst  foo.rst  pypi_description.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  python.yml  test.yml
docs/: Makefile  conf.py  index.rst
docs/_partial/: readme.rst
src/ewmh_m2m/: __init__.py  __main__.py  ewmh_m2m.py  geometry.py  ordinal.py  screen.py  window.py
tests/: conftest.py  test_geometry.py  test_screen.py  test_skeleton.py
